@@ -1,30 +1,32 @@
-if PLATFORM_WIN32
-lib_LTLIBRARIES= 
-else
 lib_LTLIBRARIES= libMonoPosixHelper.la
-endif
 
 INCLUDES = \
 	$(GLIB_CFLAGS) \
 	-I$(top_srcdir)
 
-MPH_SOURCE = \
-	mph.h 		\
-	old-map.h 	\
-	map.h 		\
+# Source code which helps implement the ANSI C standards, and thus *should* be
+# portable to any platform having a C compiler.
+MPH_C_SOURCE =   \
+	map.c          \
+	map.h          \
+	mph.h          \
+	signal.c       \
+	stdio.c        \
+	stdlib.c
+
+# Source code which helps implement POSIX and other related Unix standards,
+# and *may* be portable between Unix platforms.
+MPH_UNIX_SOURCE = \
 	dirent.c 	\
 	errno.c 	\
 	fcntl.c 	\
 	fstab.c   \
 	grp.c 		\
 	macros.c	\
-	map.c 		\
-	pwd.c 		\
 	old-map.c 	\
+	old-map.h 	\
+	pwd.c 		\
 	serial.c	\
-	signal.c	\
-	stdio.c 	\
-	stdlib.c 	\
 	sys-mman.c 	\
 	sys-sendfile.c 	\
 	sys-stat.c 	\
@@ -36,13 +38,31 @@ MPH_SOURCE = \
 	utime.c    \
 	x-struct-str.c
 
-if HAVE_ZLIB
-libMonoPosixHelper_la_SOURCES = $(MPH_SOURCE) zlib_macros.c
-libMonoPosixHelper_la_LIBADD = $(GLIB_LIBS) -lz
+if PLATFORM_WIN32
+MPH_SOURCE = $(MPH_C_SOURCE)
+MPH_LIBS   =
 else
-libMonoPosixHelper_la_SOURCES = $(MPH_SOURCE)
-libMonoPosixHelper_la_LIBADD = $(GLIB_LIBS)
+MPH_SOURCE = $(MPH_C_SOURCE) $(MPH_UNIX_SOURCE)
+MPH_LIBS   = $(GLIB_LIBS)
 endif
+
+if HAVE_ZLIB
+Z_SOURCE = \
+	zlib_macros.c
+Z_LIBS   = \
+	-lz
+else
+Z_SOURCE = 
+Z_LIBS   = 
+endif
+
+libMonoPosixHelper_la_SOURCES = \
+	$(MPH_SOURCE) \
+	$(Z_SOURCE)
+
+libMonoPosixHelper_la_LIBADD = \
+	$(MPH_LIBS) \
+	$(Z_LIBS)
 
 libMonoPosixHelper_la_LDFLAGS = -no-undefined -version-info 1:0:1
 
